--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,79 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 0;
 }
 
 a {
-  color: #00B7FF;
+  color: #00b7ff;
+}
+
+.cinema {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  align-self: flex-end;
+  background-image: url("../images/cinema.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.cinema h1 {
+  color: white;
+}
+
+.cinema button {
+  width: 200px;
+  height: 70px;
+  border-radius: 35px;
+}
+.cinema a {
+  text-decoration: none;
+}
+
+#movielist {
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-image: none;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+}
+
+.movieinfo {
+  display: inline-flex;
+  width: 20%;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+.cardMovie {
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-image: none;
+  align-items: center;
+  width: 100%;
+  padding: 50px;
+}
+
+.info {
+  display: inline-flex;
+  flex-direction: column;
+  margin: 50px;
+}
+
+.info p {
+  width: 600px;
+}
+
+.showtimes {
+  display: inline-flex;
+  padding: 0;
+  list-style: none;
+}
+.showtimes li {
+  margin: 5px;
 }
